Add new exercise and flowcharts

--- a/bootcamEs3-1.html
+++ b/bootcamEs3-1.html
@@ -12,6 +12,7 @@
             <div id="post">
                 <h1>Pseint pseudocode blog</h1>
                 <p>Crear un array para almacenar las calificaciones de 5 alumnos en un curso ingresando por consola, sacando.</p> <br>
+                <img src="img/diap2.png">
                 <p2>
     
                     Funcion P <- promedio(n,suma) <br>
